--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "angular": "~1.4.8",
     "angular-route": "~1.4.8",
-    "angular-material": "~0.11.4"
+    "angular-material": "~0.11.4",
+    "angular-resource": "~1.4.8"
   }
 }
