--- a/bower.json
+++ b/bower.json
@@ -18,8 +18,8 @@
   ],
   "dependencies": {
     "angular": "~1.4.8",
-    "angular-route": "~1.4.8",
     "angular-material": "~0.11.4",
-    "angular-resource": "~1.4.8"
+    "angular-resource": "~1.4.8",
+    "angular-ui-router": "~0.2.15"
   }
 }
