--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular": "~1.4.8",
     "angular-material": "~0.11.4",
     "angular-resource": "~1.4.8",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
+    "angular-mocks": "~1.4.8"
   }
 }
