--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
     "phantomjs": "^1.9.19"
+  },
+  "dependencies": {
+    "electron-json-storage": "^2.0.0",
+    "request-progress": "^2.0.1"
   }
 }
