--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "electron-json-storage": "^2.0.0",
-    "request-progress": "^2.0.1"
+    "request-progress": "^2.0.1",
+    "semver": "^5.1.0"
   }
 }
