--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
-  "name": "tree-of-savior-addon-manager",
-  "version": "1.0.0",
-  "description": "An addon manager for Tree of Savior.",
-  "main": "main.js",
-  "scripts": {
-    "start": "electron main.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Excrulon/Tree-of-Savior-Addon-Manager.git"
-  },
-  "keywords": [
-    "tree of savior",
-    "addon",
-    "manager"
-  ],
-  "author": "Excrulon",
-  "license": "GNUv3",
-  "bugs": {
-    "url": "https://github.com/Excrulon/Tree-of-Savior-Addon-Manager/issues"
-  },
-  "homepage": "https://github.com/Excrulon/Tree-of-Savior-Addon-Manager#readme",
-  "devDependencies": {
-    "electron-prebuilt": "^0.35.0",
-    "jasmine-core": "^2.4.1",
-    "karma": "^0.13.15",
-    "karma-chrome-launcher": "^0.2.2",
-    "karma-jasmine": "^0.3.6",
-    "karma-phantomjs-launcher": "^0.2.1",
-    "phantomjs": "^1.9.19"
-  },
-  "dependencies": {
-    "electron-json-storage": "^2.0.0",
-    "request-progress": "^2.0.1",
-    "semver": "^5.1.0"
-  }
+	"name": "tree-of-savior-addon-manager",
+	"version": "1.0.0",
+	"description": "An addon manager for Tree of Savior.",
+	"main": "main.js",
+	"scripts": {
+		"start": "electron main.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Excrulon/Tree-of-Savior-Addon-Manager.git"
+	},
+	"keywords": [
+		"tree of savior",
+		"addon",
+		"manager"
+	],
+	"author": "Excrulon",
+	"license": "GNUv2",
+	"bugs": {
+		"url": "https://github.com/Excrulon/Tree-of-Savior-Addon-Manager/issues"
+	},
+	"homepage": "https://github.com/Excrulon/Tree-of-Savior-Addon-Manager#readme",
+	"devDependencies": {
+		"electron-packager": "^7.0.2",
+		"electron-prebuilt": "^0.35.0",
+		"jasmine-core": "^2.4.1",
+		"karma": "^0.13.15",
+		"karma-chrome-launcher": "^0.2.2",
+		"karma-jasmine": "^0.3.6",
+		"karma-phantomjs-launcher": "^0.2.1",
+		"phantomjs": "^1.9.19"
+	},
+	"dependencies": {
+		"electron-json-storage": "^2.0.0",
+		"request-progress": "^2.0.1",
+		"semver": "^5.1.0"
+	}
 }
