--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tree-of-savior-addon-manager",
-  "version": "1.0.0",
+  "name": "Tree of Savior Addon Manager",
+  "version": "0.2.0",
   "description": "An addon manager for Tree of Savior.",
   "main": "main.js",
   "scripts": {
