--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Tree of Savior Addon Manager",
+  "name": "tree-of-savior-addon-manager",
   "version": "0.2.0",
   "description": "An addon manager for Tree of Savior.",
   "main": "main.js",
