--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "electron-json-storage": "^2.0.0",
+    "marked": "^0.3.5",
     "mkdirp": "^0.5.1",
     "request-progress": "^2.0.1",
     "semver": "^5.1.0"
