--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "marked": "^0.3.5",
     "mkdirp": "^0.5.1",
     "request-progress": "^2.0.1",
-    "semver": "^5.1.0"
+    "semver": "^5.1.0",
+    "moment": "^2.17.1"
   }
 }
