アドオンマネージャーの国際化 (Support i18n) (#7)
* angular-translateを導入する

`bower install --production`のみを実行する
依存関係解決が割と大変なので、Angularを1系の最新まで上げたい

* angular-translateの初期化処理と切り替え処理の仮実装

* angular-translateでの言語切替処理の仮実装

* アドオン欄のi18n化

* 不要なファイルを削除

Featureはすで使用されていないため

* index.htmlのi18n化

* 検索欄のi18n化

* すでに使用されていないルーティングを削除

* 設定ページのi18n化

* titleはi18n化しない

* 翻訳済みのメッセージを入れる

* AppVeyorでコミットごとに自動パッケージングするようにする

* 開発者ツールを非表示にし、各種コードを動くようにする

* パッケージングする時はasar化する

* appveyor.ymlを分かりやすいように書き換える

* packageスクリプトをより詳細にする

* 英語訳を仮に入れる

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An addon manager for Tree of Savior.",
   "main": "main.js",
   "scripts": {
-    "start": "electron main.js"
+    "start": "electron main.js",
+    "package": "electron-packager . ToS.Addon.Manager-%APPVEYOR_REPO_COMMIT% --out=dist --platform=win32 --arch=ia32 --version=1.4.2 --asar=true --prune=true --icon=resources/tos-exp-256.ico"
   },
   "repository": {
     "type": "git",
