--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,12 @@
     "angular-material": "^1.0.7",
     "angular-resource": "~1.4.8",
     "angular-ui-router": "~0.2.15",
-    "angular-mocks": "~1.4.8"
+    "angular-mocks": "~1.4.8",
+    "angular-cookies": "1.5.5",
+    "angular-translate": "~2.15.1",
+    "angular-translate-loader-static-files": "~2.15.1",
+    "angular-translate-storage-local": "~2.15.1",
+    "angular-translate-storage-cookie": "~2.15.1",
+    "angular-translate-handler-log": "~2.15.1"
   }
 }
