--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ install:
   - set CI=true
   - npm install -g npm@latest
   - npm install -g electron-packager
-  - npm install --production
+  - npm install
   - set PATH=%APPDATA%\npm;%PATH%
 
 #---------------------------#
