--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tree-of-savior-addon-manager",
-  "version": "0.2.5",
+  "version": "0.3.0",
   "description": "An addon manager for Tree of Savior.",
   "main": "main.js",
   "scripts": {
@@ -23,7 +23,6 @@
   },
   "homepage": "https://github.com/Excrulon/Tree-of-Savior-Addon-Manager#readme",
   "devDependencies": {
-
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.15",
     "karma-chrome-launcher": "^0.2.2",
@@ -36,6 +35,8 @@
     "marked": "^0.3.5",
     "mkdirp": "^0.5.1",
     "moment": "^2.17.1",
+    "nano": "^6.4.0",
+    "request": "^2.81.0",
     "request-progress": "^2.0.1",
     "semver": "^5.1.0",
     "xml2js": "^0.4.17"
